# echo-noise

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build-optimized.sh  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum
.github/workflows/: docker-publish.yml  tauri-release-sign.yml  tauri-release.yml
chromeExpand/: README.md  background.js  manifest.json  package-zip.sh  popup.html
chromeExpand/css/: popup.css
chromeExpand/js/: popup.js
cmd/server/: main.go
config/: config.go  config.yaml  runtime.env.example
data/: noise.db
desktop/tauri/: build-sidecar.sh  package-lock.json  package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
docs/: build_and_use.md  r2-s3.md
htmlwidgets/css/: styles.css
htmlwidgets/js/: note.js
internal/controllers/: attachment_controller.go  backup.go  comment_account_test.go  controllers.go  feed.go  message_controller.go  message_images_test.go  message_tag_test.go  rss_disabled_test.go  security.go  upload_controller.go
internal/database/: database.go
internal/dto/: auth.go  pageQuery.go  result.go  setting.go
internal/middleware/: auth.go  bearer_token.go  (+1 more)
mcp/: Dockerfile
mobilebackend/: server.go
pkg/: compress.go  session.go  text_utils.go  upload.go
public/: 200.html  404.html  index.html  manifest.json  manifest.webmanifest  sw.js
scripts/: build.sh  mock_s3.go  test-runtime-env-entrypoint.sh  verify-ffmpeg.sh
skill/: EXAMPLES.md  SKILL.md  USAGE.md  config.json
web/: app.vue  nuxt.config.ts  package-lock.json  package.json
(+948 files in other folders)
