[package]
name = "saynote-tauri"
version = "0.0.0"
authors = ["noisework"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tauri-plugin-updater = { version = "2" }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
